--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "firebase": "^12.7.0",
     "https": "^1.0.0",
     "next": "15.5.4",
     "querystring": "^0.2.1",
